--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.10",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "concurrently": "^4.1.2",
     "nodemon": "^1.19.1"
-  },
-  "proxy": "http://localhost:5000"
+  }
 }
